<resources>
    <string name="app_name">Battery Guard</string>
    <string name="action_settings">Einstellungen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="main_fragment_label">Übersicht</string>
    <string name="eventlist_fragment_label">Details</string>

    <string name="dbname">battery.db</string>
    <string name="widget_text">Text des Widget</string>
    <string name="appwidget_description">Widget Description</string>
    <string name="notification_low_importance_channel_id">Low Importance Channel ID</string>
    <string name="notification_high_importance_channel_id">High Importance Channel ID</string>
    <string name="notification_title">Battery Guard aktiv</string>
    <string name="low_importance_channel_name">BatteryGuardChannelName (Niedrige Priorität)</string>
    <string name="low_importance_channel_description">BatteryGuardChannelDescription (Niedrige Priorität)</string>
    <string name="high_importance_channel_name">BatteryGuardChannelName (Hohe Priorität)</string>
    <string name="high_importance_channel_description">BatteryGuardChannelDescription (Hohe Priorität)</string>
    <string name="observeBatteryProgress">Status: %1$s (%2$d \%%)</string>
    <string name="chargeState">Ladezustand</string>
    <string name="temperatur">Temperatur</string>
    <string name="voltage">Volt</string>
    <string name="charging">Lädt</string>
    <string name="discharging">Entladen</string>
    <string name="full">Aufgeladen</string>
    <string name="unknown">Unbekannt</string>
    <string name="good">Gut</string>
    <string name="overheat">Überhitzt</string>
    <string name="dead">Defekt</string>
    <string name="overvoltage">Überladen</string>
    <string name="unspecifiedFailure">Nicht spezifizierter Fehler</string>
    <string name="cold">Kalt</string>
    <string name="remainingPercent">%1d\%%</string>
    <string name="temperaturCelsius">%.0f\u00B0</string>
    <string name="health">Zustand</string>
    <string name="status">Status</string>
    <string name="plugged">Ladeart</string>
    <string name="temperature">Temperatur</string>
    <string name="properties">Eigenschaften</string>
    <string name="capacity">"Kapazität (mAh)"</string>
    <string name="chargeTimeRemaining">Zeit bis aufgeladen</string>
    <string name="plugInSound">Beginn Aufladen</string>
    <string name="plugOutSound">Ende Aufladen</string>
    <string name="highTemperatureSound">Ton bei hoher Akku-Temperatur</string>
    <string name="lowChargePreference">Niedrige Akkuladung</string>
    <string name="highChargeSound">Ton bei Erreichen optimaler Akkuladung</string>
    <string name="sounds">Hinweistöne und Alarme</string>
    <string name="pkPlugInNotification">pkPlugInSound</string>
    <string name="plugInSoundDesc">Hinweiston beim Beginn des Aufladens: %1s</string>
    <string name="pkPlugOutNotification">pkPlugOutSound</string>
    <string name="plugOutSoundDesc">Hinweiston beim Ende des Aufladens: %1s</string>
    <string name="pkHighTemperatureNotification">pkHighTemperatureSound</string>
    <string name="highTemperatureSoundDesc">Hinweiston wenn die Temperatur des Akkus den Wert von %1d%%
        überschreitet: %2s </string>
    <string name="chargingSounds">Ladekabel</string>
    <string name="chargingDesc">Benachrichtigung beim Anstecken oder Abziehen des Ladekabels.</string>
    <string name="pkLowChargeNotification">pkLowChargeSound</string>
    <string name="alarmTemperaturSounds">Temperatur des Akku</string>
    <string name="highTemperaturDesc">Einstelungen, wenn die Temperatur des Akku einen bestimmten Wert überschreitet</string>
    <string name="alarmChargeLevel">Ladestand</string>
    <string name="lowChargeLevelDesc">Hinweise, wenn der Ladestand des Akkus Werte über- oder unterschreitet.
    Im Smartphone kommt inzwischen nur noch der Lithium-Ionen-Akku (Li-Ion) zum Einsatz. Dieser sollte nach Möglichkeit nicht vollständig bis null Prozent entladen werden, bevor es ans Aufladen geht. Der Grund: Die Elektroden eines Lithium-Ionen-Akkus werden bei einer vollständigen Aufladung bis 100 Prozent und einer Entladung bis zum Abschalten stark belastet. Das hat zur Folge, dass die Lebensdauer des Smartphone-Akkus deutlich sinkt.</string>
    <string name="lowChargeSoundDesc">Hinweiston bei niedriger Akkuladung</string>
    <string name="soundfilename">Benachrichtigungston</string>
    <string name="pkLowChargeSoundFile">pkLowChargeSoundFile</string>
    <string name="pkHighChargeNotification">pkOptimalChargeSound</string>
    <string name="pkOptimalChargeSoundFile">pkOptimalChargeSoundFile</string>
    <string name="optimalChargeSoundDesc">Es wird empfohlen, den Akku nicht vollständig aufzuladen, sondern nur bis etwa 85 oder 85 Prozent. </string>
    <string name="settings">Einstellungen</string>
    <string name="vibration">Vibrieren</string>
    <string name="notification">Benachrichtigung</string>
    <string name="notificationsOn">Benachrichtigungen einschalten</string>
    <string name="notificationsOnDesc">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>
    <string name="pkNotificationsOn">pkNotificationsOn</string>
    <string name="noSoundFile">Stumm</string>
    <string name="pkPlugOutSoundFile">pkPlugOutSoundFile</string>
    <string name="pkPlugInSoundFile">pkPlugInSoundFile</string>
    <string name="chargeLevel">Ladestand</string>
    <string name="pkLowChargeSoundPercent">pkLowChargeSoundPercent</string>
    <string name="lowChargeSoundPercentDesc">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua</string>
    <string name="lowChargeSoundPercent">Schwellwert</string>0
    <string name="highChargeSoundPercentDesc">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
        eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua</string>
    <string name="highChargeSoundPercent">Schwellwert</string>
    <string name="pkHighChargeSoundPercent">pkHighChargeSoundPercent</string>
    <string name="pkHighTemperature">pkTemperatureDegrees</string>
    <string name="highTemperatureDesc">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
        eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua</string>
    <string name="highTemperature">Schwellwert</string>
    <string name="highChargePreference">Optimale Akkuladung</string>
    <string name="highTemperaturePreference">Hohe Akkutemperatur</string>
    <string name="pkVibrationOn">pkVibrationOn</string>
    <string name="vibrationOn">Vibration</string>
    <string name="vibrationOnDesc">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
        eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua</string>
    <string name="lowChargeSound">Ton bei Erreichen niedriger Akkuladun</string>
    <string name="notificationsNotAllowed">Benachrichtigungen sind nicht erlaubt.</string>
    <string name="change">Ändern</string>
    <string name="lowChargeSoundFileDesc">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua</string>
    <string name="lowChargeSoundFile">LowChargeSound</string>
    <string name="highChargeSoundDesc">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua</string>
    <string name="highChargeSoundFileDesc">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua</string>
    <string name="pkHighChargeSoundFile">pkHighChargeSoundFile</string>
    <string name="highChargeSoundFile">highChargeSoundFile</string>
    <string name="pkHighTemperatureSoundFile">pkHighTemperatureSoundFile</string>
    <string name="highTemperatureSoundFile">highTemperatureSoundFile</string>
    <string name="highTemperatureSoundFileDesc">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diamnonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua</string>
    <string name="plugOutSoundFile">plugOutSoundFile</string>
    <string name="plugInSoundFile">plugInSoundFile</string>
    <string name="plugInSoundFileDesc">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diamnonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua</string>
    <string name="plugOutSoundFileDesc">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diamnonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua</string>
    <string name="optimalChargePreference">Optimale Akkuladung</string>
    <string name="highTemperaturPreference">Hohe Akkutemperatur</string>
    <string name="powerUsage">Stromverbaruch</string>
    <string name="powerSettings">Akku Einstellungen</string>
    <string name="sorry_no_activity_found">Sorry. Activity kann nicht gestartet werden</string>
    <string name="notificationChannel">Benachrichtigungen</string>
    <string name="notificationChannelSettings">Einstellung zu Benachrichtigungen</string>
    <string name="pkNotificationChannelSettings">pkNotificationChannelSettings\"</string>

</resources>