<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MainFragment">

    <fragment
        android:id="@+id/MainFragment"
        android:name="com.gerwalex.batteryguard.main.MainFragment"
        android:label="@string/main_fragment_label"
        tools:layout="@layout/main_fragment">

        <action
            android:id="@+id/action_MainFragment_to_EventListFragment"
            app:destination="@id/FragmentEventList" />
        <action
            android:id="@+id/action_MainFragment_to_batteryGuardPreferenceActivity"
            app:destination="@id/batteryGuardPreferenceActivity" />
    </fragment>
    <fragment
        android:id="@+id/FragmentEventList"
        android:name="com.gerwalex.batteryguard.main.FragmentEventList"
        android:label="@string/eventlist_fragment_label"
        tools:layout="@layout/event_list">

    </fragment>
    <activity
        android:id="@+id/batteryGuardPreferenceActivity"
        android:name="com.gerwalex.batteryguard.preferences.PreferencesActivity"
        android:label="@string/settings" />
</navigation>